# jira-thing

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SKILL.md  coverage.out  diagnose.go  diagnose_test.go  explain-it.md  go.mod  go.sum  main.go  main_test.go  pyproject.toml  render.go  skills-lock.json  ticket_template.json
.claude/: rebuild.sh  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: release-go.yml  release.yml
docs/: architecture.md  dfd.md  macos-signing.md
internal/api/: api.go  api_test.go  confluence.go  confluence_test.go
internal/auth/: auth.go  auth_test.go
internal/config/: config.go  config_test.go
internal/template/: template.go  template_test.go
internal/tui/: styles.go  table.go  table_test.go
internal/version/: check.go  check_test.go
scripts/: check-author-email.sh  check-commit-msg.sh  check_action_versions.py
src/jira_client/: api.py  auth.py  cli.py  template.py
tests/: conftest.py  test_api.py  test_auth.py  test_cli.py  test_template.py
